cluster/homelab/base/flux-system/gotk-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: source-controller
    namespace: flux-system
spec:
    template:
        spec:
            containers:
                - name: manager
                  resources:
                      limits:
                          memory: 2Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: helm-controller
    namespace: flux-system
spec:
    template:
        spec:
            containers:
                - name: manager
                  resources:
                      limits:
                          memory: 2Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kustomize-controller
    namespace: flux-system
spec:
    template:
        spec:
            containers:
                - name: manager
                  resources:
                      limits:
                          memory: 2Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: notification-controller
    namespace: flux-system
spec:
    template:
        spec:
            containers:
                - name: manager
                  resources:
                      limits:
                          memory: 2Gi
---
# # These may cause issues inside flux, delete them
# $patch: delete
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-egress
#   namespace: flux-system
# ---
# $patch: delete
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-scraping
#   namespace: flux-system
# ---
# $patch: delete
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-webhooks
#   namespace: flux-system
