cluster/homelab/base/flux-system/capacitor.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor-ingress
  namespace: flux-system
  annotations:
      gethomepage.dev/enabled: "true"
      gethomepage.dev/description: FluxCD Dashboard
      gethomepage.dev/group: Automation
      gethomepage.dev/icon: flux-cd
      gethomepage.dev/name: Capacitor
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.sgenov.dev"
      secretName: ingress
  rules:
    - host: capacitor.sgenov.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
