cluster/homelab/base/flux-system/allow-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-all-ingress-egress
    namespace: flux-system
spec:
    podSelector: {}
    ingress:
        - {}
    egress:
        - {}
    policyTypes:
        - Ingress
        - Egress
